--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,7 @@
 // Here we might import custom fonts
 
-// Import our custom build of bootstrap
+// Import our custom build of bootstrap (it uses ./variables.less)
 @import "./bootstrap-custom.less";
 
-// Here we might import custom css components
+// Here we might import custom css components, overrides, or whatever
 // ...
