🐿  lazy sunday afternoon commit

--- a/src/app/components/demo/demo.html
+++ b/src/app/components/demo/demo.html
@@ -1,5 +1,9 @@
 <h1>{{ $ctrl.title }}</h1>
 
+
+<nvd3 options="$ctrl.options" data="$ctrl.data"></nvd3>
+
+
 <div class="page-header">
   <h1>Buttons</h1>
 </div>
